--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
     - docker build -t ranjanray/react-test -f ./client/Dockerfile.dev ./client
 scripts:
     # Run the test after running the container. --coverage makes sure that the test doesn't enter watch mode and returns with a status code.
-    - docker run ranjanray/react-test npm test -- --coverage
+    - docker run -e CI=true ranjanray/react-test npm test -- --coverage
 after_success:
     # create the production version of the apps.
     - docker build -t ranjanray/multi-client ./client
