--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ deploy:
     provider: elasticbeanstalk
     region: "ap-southeast-1"
     app: "multi-docker"
-    env: "MultiDocker-env"
+    env: "MultiDocker-env1"
     bucket_name: "elasticbeanstalk-ap-southeast-1-526847251372"
     bucket_path: "docker-multi"
     on:
